--- a/划重点.md
+++ b/划重点.md
@@ -1,7 +1,6 @@
 # **UE4 BattleTank课程划重点**
 
-地形绘制（Landscape Process）
-===
+# 地形绘制（Landscape Process）
 1. *构建* 下有个 *光照质量* 选成 *preview/预览* 可以降低计算要求。
 2. *设置*->*项目设置*->*地图和模式*->可以设置 *编辑器开始地图* 和 *游戏默认地图* 。</br>
 （写成中文就认得了...）
@@ -29,21 +28,45 @@
 * 绘制时及时保存，**Ctrl+Shift+S**，保存所有。
 ---
 
-导入Mesh_FBX（Actors From Multiple Mesh，Lesson 115）
-===
+# 导入Mesh_FBX（Actors From Multiple Mesh，Lesson 115）
 1. 导入文件为FBX格式
 2. *import/导入* 导入时，窗口下 *Mesh* 展开，**勾选 *Combine Meshes* 选项**
 * 记得勾选哦
-
-键盘控制
-===
-新建蓝图（lesson 115）
 ---
-1. Tank为Pawn。
-   * 新建一个Blueprint角色为*Pawn*.
-2. 打开BP_Tank，左侧*组件*下，在*DefaultScenceRoot*下，添加组件*StaticMesh/静态网格*，命名为*Tank*。
-3. 选中静态网格*Tank*，在 *Detail/细节*->*StaticMesh* 下，选择导入的Tank FBX的 *Body*。
-4. 
+
+# Actor/Pawn（Actors From Multiple Mesh，Lesson 115）
+1. 蓝图
+   1. Tank为Pawn. 新建一个Blueprint角色为*Pawn*.
+   2. 打开*BP_Tank*，左侧 *组件* 下，在*DefaultScenceRoot*下，添加组件*StaticMesh/静态网格*，命名为*Tank*。
+   3. 选中静态网格*Tank*，在 *Detail/细节*->*StaticMesh* 下，选择导入的Tank FBX的 *Body*。
+2. 添加Sokcet
+   1. 给Body添加Socket，进入Body。
+   2. 右下角 *Socket Manager/插槽管理器* -> *Create Socket/创建查插槽* ->命名为 *Turret* 。
+   3. 添加 *Preivew Static Mesh* 为新的插槽插上 *炮塔/Turret* 的StaticMesh
+      * **注意**：这里的*Preview*说明了这个只是在调整*Socket/插槽* 位置的时候用来预览的模型，并不是在这里选好了Mesh就意味着已经组装好组件了，具体的组装还要在BP里面去做，这就是**预览/Preview**的意思。
+   4. 调整Socket的位置，使得炮塔的Mesh能够安装在Tank顶部。
+3. 通过Socket添加Turret
+   * 有了Socket之后就可以往Socket上装Mesh东西了。
+   1. 打开BP_Tank。
+   2. 在Tank节点下添加子节点，*Static Mesh* -> 命名为 *Turret*。
+   3. 选中 *Turret* 节点，*Detail*->*Static Mesh*->添加*Turret 的 FBX*。
+      * 确定了其Mesh。
+   4. *Socket* 一栏，*Parent Socket/父套接字* 选择 *添加Socket* 步骤中添加的Sokcet:**Turret**。
+      * 确定了与父对象相对的安装位置。
+4. 通过Socket添加Barrel
+   * 类似上一步。如下：
+   ```flow
+   st=>start: 打开Turret
+   step1=>operation: 添加Socket，选择Barrel Mesh，调整Socket位置
+   step2=>operation: 打开BP_Tank，Turret下添加Static Mesh子节点，命名Barrel
+   step4=>operation: 打开Detail面板
+   step3=>operation: Detail下Barrel选择Static Mesh和Parent Socket
+   e=>end
+   st->step1->step2->step3->e
+   ```
+   * 这一步之后，可能Barrel不在socket的位置，仔细看Detail下的Transform->Postion**是否为零点**。
+5. 添加Track
+   * 添加左右履带
 
 ------
 # 这是h1
