--- a/划重点.md
+++ b/划重点.md
@@ -2,24 +2,25 @@
 
 # 地形绘制（Landscape Process）
 1. *构建* 下有个 *光照质量* 选成 *preview/预览* 可以降低计算要求。
-2. *设置*->*项目设置*->*地图和模式*->可以设置 *编辑器开始地图* 和 *游戏默认地图* 。</br>
+2. *设置*->*项目设置*->*地图和模式*->可以设置 *编辑器开始地图* 和 *游戏默认地图* 。
 （写成中文就认得了...）
-3. 可以添加一个 *Volume/体积* ->*LightmassImportanceVolume* 这样渲染出来的时候不会提示没有ImportVolume，即使渲染的工作量也会变小。
-4. *Landscape* 在*所有类*下，*Landscape*。*Location* 放在零点。</br>
+3. *Content Browser/内容浏览器*页面下，*Add New/新增*->*Add Feature or Content Packs/添加功能或内容包*->***Starter Content*** 可以添加 ***初学者内容包*** 。所以即使在建立项目时没有添加也没有关系。
+4. 可以添加一个 *Volume/体积* ->*LightmassImportanceVolume* 这样渲染出来的时候不会提示没有ImportVolume，即使渲染的工作量也会变小。
+5. *Landscape* 在*所有类*下，*Landscape*。*Location* 放在零点。</br>
    * 可以把原来的 *Landscape* 删掉再添加。
    * 也可以新建一个*Level*另起炉灶，但是要复制原有的*Level*的*Player Start、SkyLight、SkySphere、Light Source*等等，你懂的。
-5. 地图建立以后还想修改尺寸、分辨率：
+6. 地图建立以后还想修改尺寸、分辨率：
    1. 选中地形，*mode* 下 
    2. *manage mdoe/管理* 下 
    3. *选择工具* 选择 *Change Component Size/修改组件尺寸*
    * 这样可以将高模转换为低模，也可以将低模转换为高模，修改分辨率。
-6. 添加地形多层材质
+7. 添加地形多层材质
    1. 创建一个 *Material*, M_Landscape
    2. 材质编辑器中添加 *LandscapeLayerBlend* ，链接至*BaseColor/基础颜色* 上
    3. 在 *detail* 中 *+/加号* 给 *LayerBlend* 添加多种材质输入
    4. 添加多个 *VectorParameter* 链接到 *LayerBlend* 上
    * *LayerBlend* 就拥有了多种材质了
-7. 给地形刷上颜色
+8. 给地形刷上颜色
    1. *mode* 选 *paint mode* 
    2. *target layers* 下点开 *layers* 
    3. 在 **每个** 层右边的小加号上单击一下，*创建层信息*->*权重混合层(法线)* 
@@ -64,10 +65,39 @@
    e=>end
    st->step1->step2->step3->e
    ```
-   * 这一步之后，可能Barrel不在socket的位置，仔细看Detail下的Transform->Postion**是否为零点**。
+   * **注意**：这一步之后，可能Barrel不在socket的位置，仔细看Detail下的Transform->Postion是否为**零点**。避免低级问题浪费时间。
 5. 添加Track
-   * 添加左右履带
+   * 添加左右履带，同上。
+6. 把*tank*节点拖到*Default Scence Root*节点上，**替换**掉，如果不替换，等会儿Born出来的时候，*Pawn不会跟着tank本体。*
+---
 
-------
+# Configuration a Tank (Lesson 117)
+1. 打开物理模拟（Simulate Physics）
+   1. *BP_Tank* 下*Detail*
+   2. 勾选*Simulate Physics*
+   3. 勾选*Mass in Kg*，填上重量40t。
+2. **Set BP_Tank as Default Pawn** ***(重点)***
+   主要工作如下：
+   * Create a BP_BattleTankGameMode
+   * Assign the tank as the Default Pawn
+   * Check the correct tank spawns on play
+
+   ## Create a BP_BattleTankGameMode（类->蓝图）
+   1. *Content Browser*->*C++ Classes*->*tank*文件夹
+   2. * *推荐*：单击*Blueprint*->*GameMode: Not overriden/游戏模式未覆盖!*->*create*->**tankGameModeBase** *(名字和C++类相同)*
+      * 或者：右键*tankGameModeBase*，选择*Create Blueprint class based on tankGameMode*
+      * 因为第二种方法不会新建Blueprint文件夹，第一个会自动新建并选择位置。
+        ###### 这样就把BP和C++类联系起来了。
+   ## Assign the tank as the Default Pawn
+   1. 在GameMode的BP里面，*Default Pawn Class*设置为*BP_Tank*。
+      * 这个就是指这个GameMode一开始的时候，首先possess的Pawn。
+      * 此时play，就会possess一个Tank了。
+   2. 出生点可能低于平面或者有碰撞，不出生Tank，挪动出生点即可。
+      * 在*Window/窗口* -> *Output Log*可以看到报错。
+   3. 有可能出生以后视角不跟着Tank动：把BP_Tank下*tank*节点拖到*Default Scence Root*节点上，**替换**掉，如果不替换，等会儿Born出来的时候，*Pawn不会跟着tank本体。*
+   ## Check the correct tank spawns on play
+   * 出生以后，Tank放在一定高度上，会摔一下，镜头应该跟着一起动。
+   * 在Content里面Play后也自动出生一个。
+
 # 这是h1
 ###### 这是h6
