--- a/划重点.md
+++ b/划重点.md
@@ -1,4 +1,5 @@
-# **UE4 BattleTank课程划重点**
+**UE4 BattleTank课程划重点**
+===
 
 # 地形绘制（Landscape Process）
 1. *构建* 下有个 *光照质量* 选成 *preview/预览* 可以降低计算要求。
@@ -68,7 +69,7 @@
    * **注意**：这一步之后，可能Barrel不在socket的位置，仔细看Detail下的Transform->Postion是否为**零点**。避免低级问题浪费时间。
 5. 添加Track
    * 添加左右履带，同上。
-6. 把*tank*节点拖到*Default Scence Root*节点上，**替换**掉，如果不替换，等会儿Born出来的时候，*Pawn不会跟着tank本体。*
+6. 把*tank*节点拖到*Default Scence Root*节点上，**替换**掉，如果不替换，等会儿spawns 出来的时候，*Pawn不会跟着tank本体。*
 ---
 
 # Configuration a Tank (Lesson 117)
@@ -94,10 +95,44 @@
       * 此时play，就会possess一个Tank了。
    2. 出生点可能低于平面或者有碰撞，不出生Tank，挪动出生点即可。
       * 在*Window/窗口* -> *Output Log*可以看到报错。
-   3. 有可能出生以后视角不跟着Tank动：把BP_Tank下*tank*节点拖到*Default Scence Root*节点上，**替换**掉，如果不替换，等会儿Born出来的时候，*Pawn不会跟着tank本体。*
+   3. 有可能出生以后视角不跟着Tank动：把BP_Tank下*tank*节点拖到*Default Scence Root*节点上，**替换**掉，如果不替换，等会儿spawns出来的时候，*Pawn不会跟着tank本体。*
    ## Check the correct tank spawns on play
    * 出生以后，Tank放在一定高度上，会摔一下，镜头应该跟着一起动。
    * 在Content里面Play后也自动出生一个。
+---
+# 3rd Person Camera Conrtrol(Lesson 118)
+1. 添加*Spring Arm*，把*Spring Arm*放到*Tank*节点下。
+2. 添加*Camera*，把*Camera*放到*Spring Arm***节点下**。
+3. 调整*Spring Arm*中心位置和*Camera*位置
+   * 此时，手动旋转*Spring Arm*发现*Camera*以*Spring Arm*中心点（即*Tank*本体）旋转。
+4. *设置->项目设置->输入->Bindings->Axis Mappings/**轴**映射* 下，添加鼠标XY轴，命名为*AimAzimuth*和*AimElevation*。
+   * 这里，创建了输入事件。
+5. *BP_Tank* 蓝图下，*我的蓝图* 窗口，*Graphs/图表* 添加一个*Input Setup*子图。
+   * 这里，可以在蓝图中响应输入事件，子图命名可任意。
+6. 蓝图中创建输入事件、响应动作并建立连接。
+   1. 右键添加，*AddLocalRotation***函数**（是函数，选择目标是*SpringArm*的选项），*InputAxis/输入轴 AimAzimuth*事件。
+      * 图中此时有*AddLocalRotation*函数、*InputAxis/输入轴 AimAzimuth*事件、*SpringArm*变量（Get、获取）
+   2. 连接Azimuth。
+      * AimAzimuth exec->AddLocalRotation exec.
+      * SpringArm->AddLocalRotation Target/目标. 
+      * AimAzimuth Axis Value->AddLocalRotation（**右击DeltaRotation，Split Struct Pin/分割结构体引脚**） Delta Rotation Z (Yaw)
+         * 可以中间加入一个*Multiply*调整转动速率。
+   3. 连接Elevation。
+      * 同上。
+7. 测试。发现鼠标控制摆动**不符合预期**，但鼠标XY轴事件动作响应正常。
+# Fixing 3rd Person Camera Rotation(Lesson 119)
+* 原因：Rotate的时候坐标不固连于关节支座，而是与臂固连，一旦摆动XYZ平面就不和地面正交平行了。
+1. Azimuth与Elevation分别连接于不同对象，Elevation控制目标为*SpringArm*，不修改。
+2. 在*Tank*节点下添加一个*Scence*节点，命名*Azimuth Gimbal(水平支架)*。
+   * 意为使其保持水平，在这个始终相对父节点为水平（即Roll和Pitch相对父节点始终为0）的*支架*上再做Pitch运动即可解决问题。
+3. *SpringArm*挂在*Azimuth Gimbal*节点下。
+   * 此时结构为*Azimuth Gimbal*->*SpringArm*->*Camera*
+4. 坐标归零，使之后偏转没有偏心距。
+   * *Camera*的*Position、Rotation*归零到*SpringArm*，调整*SpringArm*的*Target Arm Length*
+   * *SpringArm*的*Position、Rotation*归零到*Azimuth Gimbal*，调整*Azimuth Gimbal Position*
+4. 从*Component/组件*中拖拽*Azimuth Gimbal*到BP，或者在BP中添加*获取Azimuth Gimbal变量*
+5. 将*Azimuth Gimbal*作为*AddLocalRotation*函数的*目标*输入，*输入轴Azimuth*作为函数*Yaw*的输入值（需右键展开），完成连接即可。
+6. 补充：此时父节点（即车）如果在坡上倾斜了，视角三个轴都会倾斜，如果需要某个轴不随地形变化，可以在*SpringArm->Camera Settings*下取消勾选*Inherit xxx*即可。
 
 # 这是h1
 ###### 这是h6
