User Interface (UI) (Lesson 120)
User Interface (UI) (Lesson 120)

--- a/划重点.md
+++ b/划重点.md
@@ -85,10 +85,10 @@
 
    ## Create a BP_BattleTankGameMode（类->蓝图）
    1. *Content Browser*->*C++ Classes*->*tank*文件夹
-   2. * *推荐*：单击*Blueprint*->*GameMode: Not overriden/游戏模式未覆盖!*->*create*->**tankGameModeBase** *(名字和C++类相同)*
+   2. * *推荐*：单击*Blueprint*->*GameMode: Not overriden/游戏模式未覆盖!*->*create*->**tankGameModeBase** *(名字和C++类相同)*，命名为*BP_tankGameModeBase*
       * 或者：右键*tankGameModeBase*，选择*Create Blueprint class based on tankGameMode*
-      * 因为第二种方法不会新建Blueprint文件夹，第一个会自动新建并选择位置。
-        ###### 这样就把BP和C++类联系起来了。
+         * 因为第二种方法不会新建Blueprint文件夹，第一个会自动新建并选择位置。
+         * ***这样就把BP和C++类联系起来了。***
    ## Assign the tank as the Default Pawn
    1. 在GameMode的BP里面，*Default Pawn Class*设置为*BP_Tank*。
       * 这个就是指这个GameMode一开始的时候，首先possess的Pawn。
@@ -121,7 +121,7 @@
       * 同上。
 7. 测试。发现鼠标控制摆动**不符合预期**，但鼠标XY轴事件动作响应正常。
 # Fixing 3rd Person Camera Rotation(Lesson 119)
-* 原因：Rotate的时候坐标不固连于关节支座，而是与臂固连，一旦摆动XYZ平面就不和地面正交平行了。
+* 原因：Rotate的时候坐标不固连于关节支座，而是与臂固连，一旦摆动XYZ平面就不和父节点基准面正交平行了。
 1. Azimuth与Elevation分别连接于不同对象，Elevation控制目标为*SpringArm*，不修改。
 2. 在*Tank*节点下添加一个*Scence*节点，命名*Azimuth Gimbal(水平支架)*。
    * 意为使其保持水平，在这个始终相对父节点为水平（即Roll和Pitch相对父节点始终为0）的*支架*上再做Pitch运动即可解决问题。
@@ -133,6 +133,37 @@
 4. 从*Component/组件*中拖拽*Azimuth Gimbal*到BP，或者在BP中添加*获取Azimuth Gimbal变量*
 5. 将*Azimuth Gimbal*作为*AddLocalRotation*函数的*目标*输入，*输入轴Azimuth*作为函数*Yaw*的输入值（需右键展开），完成连接即可。
 6. 补充：此时父节点（即车）如果在坡上倾斜了，视角三个轴都会倾斜，如果需要某个轴不随地形变化，可以在*SpringArm->Camera Settings*下取消勾选*Inherit xxx*即可。
+---
+# User Interface (UI) (Lesson 120)
+* 在图显示界面中央添加一个白点
+## *Widget Blueprint*蓝图
+   1. *新增/Add New->User Interface/用户界面->Widget Blueprint/控件蓝图*，命名*PlayerUI*
+   2. *Common/通用*下拖拽一个*Image*到画布中，*层级*框中命名为*AimPoint*，拖出一个小白框
+   3. 单击选中*AimPoint*显示范围框的左上角会出现*Anchor/锚点*
+   4. 拖拽*锚点*到X:50%,Y:33.3%的中间偏上位置
+   5. 调整*AimPoint*的*detail*：*Position*XY归零（此时小白框左上角对准*Anchor*），*Alignment*都为0.5（*Alignment*是百分比单位，0.5=50%）
+## *Player Controller*蓝图
+   1. *新增/Add New->Blueprint Class/蓝图类->Player Controller*，命名*BP_TankPlayerController*
+   2. 打开*Graphs->Event BeginPlay*
+   3. *Event BeginPlay*连接到一个*CreateWidget*(*UserInterface*分类下)，*Class*选上一步的*PlayerUI*
+   4. *Create Player UI Widget*连接到一个*Add to Viewport*(*exce*和*Target* Pin对应连接)
+   * We almost there, hold on.
+## Set the Player Controller
+   * Find the game mode blueprint for this Level
+   * Set the Player Controller to be our new BP Class
+   * Test the aiming dot shows up.
+   1. game mode blueprint 即*BP_tankGameModeBase*
+   2. 修改*Player Controller Class*为*BP_TankPlayerController*
+   3. 测试。
+## 补充：Unreal中添加Alpha通道的图片
+   1. 目前*AimPoint*是一个白色的小框（虽然之后会有控制变色的设计实现），可以通过修改*Appearance->Brush->Image*添加图片修改显示，因为其本身就是*Image*控件。
+   2. Alpha透明通道的透明图片可使用PS画出。
+      1. 打开PS，新建图片，设置尺寸
+      2. 右下角，*图层*切换到*通道/Channel*
+      3. 单击下面的*新建*，会直接新建一个*Aplha*通道
+      4. 可以直接在各个通道（ARGB）上作图了。
+      5. 导出时，选择有Aplha通道的格式导出（如：*.exr格式）
+   
 
 # 这是h1
 ###### 这是h6
