总结UserWidget UI的使用

--- a/划重点.md
+++ b/划重点.md
@@ -163,7 +163,10 @@
       3. 单击下面的*新建*，会直接新建一个*Aplha*通道
       4. 可以直接在各个通道（ARGB）上作图了。
       5. 导出时，选择有Aplha通道的格式导出（如：*.exr格式）
-   
+## 使用 *UserWidget* UI 的思路
+   1. 新建蓝图并绘制UI，*BP->UserWidget*
+   2. 新建*PlayerController类* 蓝图，并设置*GameMode*
+   3. *BP_PlayerController*中*Create Widget*并且*Add to Viewport*
 
 # 这是h1
 ###### 这是h6
