Main Menu Screen（Lesson 121）
有总结

--- a/划重点.md
+++ b/划重点.md
@@ -167,6 +167,49 @@
    1. 新建蓝图并绘制UI，*BP->UserWidget*
    2. 新建*PlayerController类* 蓝图，并设置*GameMode*
    3. *BP_PlayerController*中*Create Widget*并且*Add to Viewport*
+---
+# Main Menu Screen（Lesson 121）
+* 构建主菜单
+## Add a New Level
+   1. *Add New->Level/关卡*，命名*MainMenu*，将所有Level文件都放在新建*Levels*文件夹下
+   2. 双击打开全空的*MainMenu*，*蓝图->打开关卡蓝图*
+      * （不用*GameMode Override*，后文的*BeginPlay*与BP有关，不在GameMode里面）
+## Add Widget from Level Blueprint
+   * Open the MainMenu Level BP
+   * Create BP to add widget to screen
+   * Test this works with a button, image or something.
+   1. Open the MainMenu Level BP
+   2. Create BP to add widget to screen
+      1. 添加*用户界面->UserWidget/控件蓝图*，同*PlayerUI*
+      2. 添加*Image*，*Brush*选Tank作为背景图片
+      3. *Levels->MainMenu->蓝图->打开关卡蓝图*
+      4. *Create Widget*并且*Add to Viewport*
+         * 此时鼠标单击激活窗口以后，就不显示了，显示出来才能执行之后的单击操作
+      5. 添加连接*Add to Viewport->Set Show Mouse Cursor*，勾选*Show Mouse Cursor*选项,*Set Show Mouse Cursor*的*目标*是*Get Player Controller*，*Player Index*是默认的0
+         * **注意**：这里*添加操作*时有可能找不到*Set Show Mouse Cursor*，在*输入弹出框*的右上角有一个***情景关联***，**取消勾选**即可搜索到结果。
+         * 此时，就会实现鼠标显示不隐藏的功能了。
+## 图片自动缩放（ScaleBox）
+   * UserWidget中，通过拖拽*Archer/锚点*实现图片自适应大小，会出现比例失真，可以通过*ScaleBox*自适应大小
+   1. 层级如下：*[BP _MainMenu]->[Canvas Panel]->**[ScaleBox]**->[MainMenu Background]*
+   2. 调整*ScaleBox*的*offset/偏移*，让其*顶底左右*四个方向偏移都为0即可。
+      * 要先拉开*Archer*，要不会显示*XY坐标*以及*长宽*，没有偏移参数。
+   3. 运行测试。
+---
+# **关于GameMode的总结+工程修正** *倾力打造，重磅来袭*
+   1. 工程修正
+      * 问题： 在操作到上面步骤运行的时候，发现*MainMenu Level*启动以后，中间有*AimPoint*。
+      * 解决：
+         1. 问题在于整个项目设置*Default Modes*下*Default Pawn Class*是*BP_Tank*，*GameMode*启动的时候，直接把一个Tank个Spawns出来了，所以就有*AimPoint*了。
+         2. 在项目设置*Default Modes*下，*Default Game Mode*改回*GameModeBase*,*GameMode*也行，下面的选项都默认了。
+         3. 在*BP_tankGameModeBase*下设置*Player Controller Class*和*Default Pawn Class*配置为Tank的。
+   2. 总结
+         * **所以为什么要*Override*掉*tankGameMode*的蓝图呢?**
+         ```
+            因为直接编辑*tankGameMode*的BP没有上面的选项。
+         ```
+---
+
+
 
 # 这是h1
 ###### 这是h6
