Update Main Menu UI
（Lesson 121、123）

--- a/划重点.md
+++ b/划重点.md
@@ -133,6 +133,7 @@
 4. 从*Component/组件*中拖拽*Azimuth Gimbal*到BP，或者在BP中添加*获取Azimuth Gimbal变量*
 5. 将*Azimuth Gimbal*作为*AddLocalRotation*函数的*目标*输入，*输入轴Azimuth*作为函数*Yaw*的输入值（需右键展开），完成连接即可。
 6. 补充：此时父节点（即车）如果在坡上倾斜了，视角三个轴都会倾斜，如果需要某个轴不随地形变化，可以在*SpringArm->Camera Settings*下取消勾选*Inherit xxx*即可。
+   * 实验证明，旋转全都继承（*Inherit*），体验最逼真。
 ---
 # User Interface (UI) (Lesson 120)
 * 在图显示界面中央添加一个白点
@@ -168,7 +169,7 @@
    2. 新建*PlayerController类* 蓝图，并设置*GameMode*
    3. *BP_PlayerController*中*Create Widget*并且*Add to Viewport*
 ---
-# Main Menu Screen（Lesson 121）
+# Main Menu UI（Lesson 121、123）
 * 构建主菜单
 ## Add a New Level
    1. *Add New->Level/关卡*，命名*MainMenu*，将所有Level文件都放在新建*Levels*文件夹下
@@ -208,8 +209,17 @@
             因为直接编辑*tankGameMode*的BP没有上面的选项。
          ```
 ---
-
-
+## Buttons
+   * 添加一个*Button*，实现单击后进入*tankGameMode*的功能：
+   1. 添加一个*Button*，拖拽并放置。
+   2. *Detail*下找到*onClickEvent*事件，单击*查看*打开事件响应蓝图。
+   3. *exce*连接到*OpenLevel*函数下，填入*tankGameMode（注意名称与实际 Level名称对应）*
+   4. 测试，单击按键能够进入下一个*Level*。
+   * 设置Button为默认按钮：
+   1. *SetInputModeUIOnly*
+      * 设置后进入关卡以后还是*UIOnly*模式不响应鼠标
+   2. *SetInputModeGameOnly*
+      * 所以需要设置回*GameOnly*
 
 # 这是h1
 ###### 这是h6
