--- a/划重点.md
+++ b/划重点.md
@@ -220,6 +220,7 @@
       * 设置后进入关卡以后还是*UIOnly*模式不响应鼠标
    2. *SetInputModeGameOnly*
       * 所以需要设置回*GameOnly*
+   ![avatar](./SetInputMode.png)
 
 # 这是h1
 ###### 这是h6
