Delegating to Component（Lesson126）

--- a/划重点.md
+++ b/划重点.md
@@ -217,10 +217,40 @@
    4. 测试，单击按键能够进入下一个*Level*。
    * 设置Button为默认按钮：
    1. *SetInputModeUIOnly*
-      * 设置后进入关卡以后还是*UIOnly*模式不响应鼠标
-   2. *SetInputModeGameOnly*
-      * 所以需要设置回*GameOnly*
-   ![avatar](./SetInputMode.png)
+      * 设置后进入关卡以后还是*UIOnly*模式**不响应鼠标**
+   2. 添加*SetInputModeGameOnly*
+      * 所以**打开下一个关卡(OpenLevel)之后**，设置回*GameOnly*：即添加*SetInputModeGameOnly*
+      ![img](./figures/SetInputMode2.png)
+      ![img](./figures/SetInputMode.png)
+      * *WidgetEvent*是*CustomEvent*，见下节。
+## 自定义事件（Custom Event）的生成和调用
+   1. 先构造出蓝色的*WidgetReady*：添加*CustomEvent*，命名为*WidgetReady*即可，需要**编译保存**。
+   2. 再添加红色的*WidgetReady*：搜索*CustomEvent*下的*WidgetReady*即可。
+---
+# Delegating to Component（Lesson126）
+   1. 添加一个*C++类*，*PlayerController*，命名*TankPlayerController*,*Public*
+   2. 添加一个*MyTank类*，选*Pawn*
+      * 来源：*BP_tank*父类是*Pawn*（打开BP，右上角显示父类）
+   3. TankPlayerController.h添加：
+   ```
+   class TANK_API ATankPlayerController : public APlayerController{
+      ...
+      public:
+	   AMyTank *GetControlledTank() const;
+   }
+   ```
+   4. TankPlayerController.cpp添加：
+   ```
+   AMyTank *ATankPlayerController::GetControlledTank() const
+   {
+      return Cast<AMyTank>(GetPawn());
+   }
+   ```
+   5. 编译。
+   6. re-parent：打开*BP_Tank*，上方*类设置*，会切换到*Detail*下，*父类*选为*TankPlayerController*
+   7. 编译。
+---
+
 
 # 这是h1
 ###### 这是h6
