Overloading and Polymorphism(Lesson 128)
**非常棒**

--- a/划重点.md
+++ b/划重点.md
@@ -247,9 +247,125 @@
    }
    ```
    5. 编译。
-   6. re-parent：打开*BP_Tank*，上方*类设置*，会切换到*Detail*下，*父类*选为*TankPlayerController*
+   6. re-parent：
+      * 打开*BP_Tank*，上方*类设置*，会切换到*Detail*下，*父类*选为*MyTank*
+      * 打开*BP_TankPlayerController*，上方*类设置*，会切换到*Detail*下，*父类*选为*TankPlayerController*
    7. 编译。
 ---
+# Using *virtual* and *override*
+
+TankPlayerController.h :
+```
+class TANK_API ATankPlayerController : public APlayerController
+{
+	GENERATED_BODY()
+	
+public:
+	// 获得spawns出来的Tank的Controller
+	AMyTank *GetControlledTank() const;
+	
+	// 重写BeginPlay函数
+	virtual void BeginPlay() override;
+};
+```
+TankPlayerController.cpp :
+```
+#include "TankPlayerController.h"
+
+AMyTank *ATankPlayerController::GetControlledTank() const
+{
+	// cast到返回类型，MyTank类是Pawn
+	return Cast<AMyTank>(GetPawn());
+}
+
+void ATankPlayerController::BeginPlay()
+{
+	// 重写以后，一般都call父类
+	Super::BeginPlay();
+
+	auto controlledTank = GetControlledTank();
+	if (!controlledTank)
+	{
+		UE_LOG(LogTemp, Warning, TEXT("PlayerController NOT pocessing a tank."))
+	}
+	else
+	{
+		UE_LOG(LogTemp, Warning, TEXT("pocessing a tank: %s"), *(controlledTank->GetName()))
+	}
+
+	UE_LOG(LogTemp, Warning, TEXT("PlayerController BeginPlay"))
+}
+```
+
+* 如果上一步re-parent配置正确，则打印正确结果：
+```
+LogTemp: Warning: pocessing a tank: BP_Tank_C_0
+LogTemp: Warning: PlayerController BeginPlay
+```
+---
+# Overloading and Polymorphism(Lesson 128) **非常棒**
+
+* 重载、重写、虚函数，Polymorphism（多态性）
+* 父类函数以virtual修饰，继承的子类重写（override）以后，执行子类的函数。
+* 父类函数不以virtual修饰，继承的子类有同名函数，执行子类函数。
+
+```C++
+using namespace std;
+
+class Animal
+{
+public:
+	// 不加virtual，输出“Animal makeNoise”
+	// 加virual，输出子类的“makeNoise”
+	virtual void makeNoise()
+	{
+		cout << "Animal makeNoise" << endl;
+	}
+};
+
+// 传参一定是以地址的方式，Animal animal会造成复制。
+// 注意，参数类型是Animal！
+void Stroke(Animal *animal)
+{
+	animal->makeNoise();
+}
+
+// 继承Animal
+class Dog : public Animal
+{
+public:
+	void makeNoise()
+	{
+		cout << "Dog makeNoise" << endl;
+	}
+};
+
+// 继承Animal
+class Cat : public Animal
+{
+public:
+	void makeNoise()
+	{
+		cout << "Cat makeNoise" << endl;
+	}
+};
+
+int main()
+{
+	Dog dog;
+	Cat cat;
+	Stroke(&dog);	//输出"Dog makeNoise"
+	Stroke(&cat);	//输出"Cat makeNoise"
+	
+	return 0;
+}
+```
+
+---
+# Virual Functions and Vtables(Lesson 129) **非常棒**  
+
+---
+
 
 
 # 这是h1
