Creating an AI Controller Class(Lesson 130)

--- a/划重点.md
+++ b/划重点.md
@@ -1,6 +1,8 @@
 **UE4 BattleTank课程划重点**
 ===
 
+[TOC]
+
 # 地形绘制（Landscape Process）
 1. *构建* 下有个 *光照质量* 选成 *preview/预览* 可以降低计算要求。
 2. *设置*->*项目设置*->*地图和模式*->可以设置 *编辑器开始地图* 和 *游戏默认地图* 。
@@ -363,9 +365,34 @@ int main()
 
 ---
 # Virual Functions and Vtables(Lesson 129) **非常棒**  
+* vtable 是个查找表，virtual以后会跳到vtable查函数入口地址。
+* 不用virtual会硬编码到汇编里面，速度会快。
+* 工具：www.godbolt.org 在线代码编译、汇编
 
 ---
 
+# Creating an AI Controller Class(Lesson 130)
+* *AI Controller*找到*AI Tank*
+   1. 添加一个*AIController* C++类（需要勾选*显示所有类* 才能搜索到），命名*TankAIController*
+   2. 类似*ATankPlayerController*，增加*GetControlledTank() const及BeginPlay() override*
+   3. *BP_Tank->类默认值->AIControllerClass*选择*TankAIController*
+      * 到这里，*TankAIController*就应该能够获得场上的*AITank*了
+   4. 运行，应该能够打印*TankAIController*以及*TankPlayerController*中的UE_LOG，显示"pocessing a tank: xxx"获取了一个Tank的控制权。
+* *AI Controller*找到*Player Tank*
+   ```C++
+   AMyTank *ATankAIController::GetPlayerTank() const
+   {
+      auto playerPawn = GetWorld()->GetFirstPlayerController()->GetPawn();
+      if (!playerPawn) { return nullptr; }
+      return Cast<AMyTank>(playerPawn);
+   }
+   ```
+---
+# BP、Class 之间的关系
+* BP_Tank
+   * 父类是C++ Class: MyTank， AIControllerClass:TankAIController
+   * 
+* 
 
 
 # 这是h1
