--- a/划重点.md
+++ b/划重点.md
@@ -391,9 +391,26 @@ int main()
 # BP、Class 之间的关系
 * BP_Tank
    * 父类是C++ Class: MyTank， AIControllerClass:TankAIController
-   * 
-* 
+* BP_TankPlayerController
+   * 父类是C++ Class: TankPlayerController
+* BP_tankGameModeBase 类默认值
+   * Player Controller Class: BP_TankPlayerContrller
+   * Default Pawn Class: BP_Tank
+---
 
+# C++ Coding
+1. UE_LOG
+   * 注意 \* 号操作符
+   ```C++
+   UE_LOG(LogTemp, Warning, TEXT("HitLocation: %s"), *HitLocation.ToString())
+   UE_LOG(LogTemp, Warning, TEXT("HitLocation is that."))
+   ```
+1. 获取屏幕大小
+   ```C++
+   // 获得屏幕大小
+   int32 viewportSizeX, viewportSizeY;
+   GetViewportSize(viewportSizeX, viewportSizeY);
+   ```
 
 # 这是h1
 ###### 这是h6
