--- a/划重点.md
+++ b/划重点.md
@@ -399,18 +399,100 @@ int main()
 ---
 
 # C++ Coding
-1. UE_LOG
+## UE_LOG
    * 注意 \* 号操作符
    ```C++
    UE_LOG(LogTemp, Warning, TEXT("HitLocation: %s"), *HitLocation.ToString())
    UE_LOG(LogTemp, Warning, TEXT("HitLocation is that."))
    ```
-1. 获取屏幕大小
+## 获取屏幕大小
    ```C++
    // 获得屏幕大小
    int32 viewportSizeX, viewportSizeY;
    GetViewportSize(viewportSizeX, viewportSizeY);
    ```
+## 得到世界（World）坐标系下，视线方向
+   ```C++
+   // "De-project"准星方向到世界（World）坐标系下方向，均一化
+	FVector _cameraWorldLocation;	// Not used
+	FVector LookDirection;
+	bool bGetLookDir = DeprojectScreenPositionToWorld(
+		screenLocation.X, screenLocation.Y,
+		_cameraWorldLocation, LookDirection);
+   if (bGetLookDir)
+	{
+      //--> GetLookVectorHitLocation(LookDirection, HitLocation);
+		//UE_LOG(LogTemp,Warning, TEXT("Look direction: %s"),*LookDirection.ToString())
+	}
+   ```
+## 视线碰撞点，LineTrace
+   ```C++
+   bool ATankPlayerController::GetLookVectorHitLocation(FVector LookDirection, FVector& HitLocation) const
+   {
+      FHitResult HitResult;
+      auto startLocation = PlayerCameraManager->GetCameraLocation();	//获得摄像机位置，作为LineTrace起始位置
+      auto endLocation = startLocation + (LookDirection*LineTraceRange);	//向量乘法与加法
+      if (GetWorld()->LineTraceSingleByChannel(
+         HitResult,
+         startLocation,
+         endLocation,
+         ECollisionChannel::ECC_Visibility)
+      )
+      {
+         HitLocation = HitResult.Location;
+         return true;
+      }
+      //没打到，无碰撞
+      HitLocation = FVector(0, 0, 0);
+      return false;
+   }
+   ```
+## Create Default Sub Objects in C++
+   1. ActorComponent
+      1. 新建C++ Class, *ActorComponent*，命名*TankAimingComponent*
+      2. MyTank.j
+      ```C++
+      #include "TankAimingComponent.h"
+      ...
+      protected:
+         ...
+         UTankAimingComponent* TankAimingComponent = nullptr;
+      ```
+      3. MyTank.cpp, 使用函数：CreateDefaultSubobject
+      ```C++
+      // Sets default values
+      AMyTank::AMyTank()
+      {
+         // Set this pawn to call Tick() every frame.  You can turn this off to improve performance if you don't need it.
+         PrimaryActorTick.bCanEverTick = true;
+
+         // 不用保护空指针，构造函数很少挂
+         TankAimingComponent = CreateDefaultSubobject<UTankAimingComponent>(FName("Aiming Component")); //名字编译后会出现在BP中
+
+      }
+      ```
+## Blueprint Callable
+   1. UFUNCTION(BlueprintCallable, Category = SetupXXX)
+      * MyTank.h:
+      ```C++
+      // 设置、获取Barrel
+      // 暴露给蓝图
+      UFUNCTION(BlueprintCallable, Category = Setup)
+      void SetBarrelReference(UStaticMeshComponent* BarrelToSet);
+      ```
+   * MyTank.cpp
+      ```C++
+      // 设置Barrel给Component
+      void AMyTank::SetBarrelReference(UStaticMeshComponent * BarrelToSet)
+      {
+         TankAimingComponent->SetBarrelReference(BarrelToSet);
+      }
+      ```
+   * 编译之后，SetBarrelReference在蓝图里面可以添加。
+   * BP_Tank:   
+   ![img](./figures/SetBarrelReference.png)
+
+
 
 # 这是h1
 ###### 这是h6
