*向上一层* 获取各个Pawn、Actor、Owner

--- a/划重点.md
+++ b/划重点.md
@@ -491,8 +491,33 @@ int main()
    * 编译之后，SetBarrelReference在蓝图里面可以添加。
    * BP_Tank:   
    ![img](./figures/SetBarrelReference.png)
-
-
+## *向上一层* 获取各个Pawn、Actor、Owner
+   * AIController获取控制的Pawn：
+   ```C++
+   AMyTank *ATankAIController::GetControlledTank() const
+   {
+      // cast到返回类型，MyTank类是Pawn
+      return Cast<AMyTank>(GetPawn());
+   }
+   ```
+   * AIController获取PlayerController或者Player的Pawn：
+   ```C++
+   AMyTank *ATankAIController::GetPlayerTank() const
+   {
+      auto playerPawn = GetWorld()->GetFirstPlayerController()->GetPawn();
+      if (!playerPawn) { return nullptr; }
+      return Cast<AMyTank>(playerPawn);
+   }
+   ```
+   ActorComponent 使用*GetOwner()* :
+   ```C++
+   void UTankAimingComponent::AimAt(FVector HitLocation)
+   {
+      FString tankName = GetOwner()->GetName();
+      auto barrelLocation = Barrel->GetComponentLocation();
+      UE_LOG(LogTemp, Warning, TEXT("%s aiming at %s from %s"), *tankName, *(HitLocation.ToString()), *(barrelLocation.ToString()))
+   }
+   ```
 
 # 这是h1
 ###### 这是h6
