--- a/划重点.md
+++ b/划重点.md
@@ -448,6 +448,8 @@ int main()
    }
    ```
 ## Create Default Sub Objects in C++
+* *CreateDefaultSubobject*必须写在**Actor的无参构造函数中**，否则crash
+* *CreateDefaultSubobject*中的TEXT或者FName参数在同一个Actor中不能重复，否则crash
    1. ActorComponent
       1. 新建C++ Class, *ActorComponent*，命名*TankAimingComponent*
       2. MyTank.j
@@ -518,6 +520,54 @@ int main()
       UE_LOG(LogTemp, Warning, TEXT("%s aiming at %s from %s"), *tankName, *(HitLocation.ToString()), *(barrelLocation.ToString()))
    }
    ```
+## 获取Sokect的位置
+```C++
+void UTankAimingComponent::AimAt(FVector HitLocation, float LaunchSpeed)
+{
+	//FString tankName = GetOwner()->GetName();
+	//auto barrelLocation = Barrel->GetComponentLocation();
+	if (!Barrel) { return; }
+
+	// 获得Socket的位置
+	FVector startLocation = Barrel->GetSocketLocation(FName("Projectile"));
+   ... ...
+}
+```
+## SuggestProjectileVelocity
+```C++
+void UTankAimingComponent::AimAt(FVector HitLocation, float LaunchSpeed)
+{
+	if (!Barrel) { return; }
+
+	// 获得Socket的位置
+	FVector startLocation = Barrel->GetSocketLocation(FName("Projectile"));
+
+	// 计算出膛速度
+	FVector outLaunchVelocity;
+	bool bHaveAimSolution = UGameplayStatics::SuggestProjectileVelocity(
+		this,
+		outLaunchVelocity,
+		startLocation,
+		HitLocation,
+		LaunchSpeed,
+		false,
+		0,
+		0,
+		ESuggestProjVelocityTraceOption::DoNotTrace);
+		
+	if(bHaveAimSolution)
+	{
+		// 归一化，就是角度
+		auto aimDirection = outLaunchVelocity.GetSafeNormal();
+
+		// 转动Barrel
+		MoveBarrelTowards(aimDirection);
+
+		FString tankName = GetOwner()->GetName();
+		UE_LOG(LogTemp, Warning, TEXT("%s aiming at: %s"), *tankName, *aimDirection.ToString())
+	}
+}
+```
 
 # 这是h1
 ###### 这是h6
