--- a/划重点.md
+++ b/划重点.md
@@ -136,6 +136,8 @@
 5. 将*Azimuth Gimbal*作为*AddLocalRotation*函数的*目标*输入，*输入轴Azimuth*作为函数*Yaw*的输入值（需右键展开），完成连接即可。
 6. 补充：此时父节点（即车）如果在坡上倾斜了，视角三个轴都会倾斜，如果需要某个轴不随地形变化，可以在*SpringArm->Camera Settings*下取消勾选*Inherit xxx*即可。
    * 实验证明，旋转全都继承（*Inherit*），体验最逼真。
+
+   ![img](./figures/TankHierarchy.png)
 ---
 # User Interface (UI) (Lesson 120)
 * 在图显示界面中央添加一个白点
@@ -452,7 +454,7 @@ int main()
 * *CreateDefaultSubobject*中的TEXT或者FName参数在同一个Actor中不能重复，否则crash
    1. ActorComponent
       1. 新建C++ Class, *ActorComponent*，命名*TankAimingComponent*
-      2. MyTank.j
+      2. MyTank.h
       ```C++
       #include "TankAimingComponent.h"
       ...
@@ -534,6 +536,7 @@ void UTankAimingComponent::AimAt(FVector HitLocation, float LaunchSpeed)
 }
 ```
 ## SuggestProjectileVelocity
+SuggestProjectileVelocity，已知初速度大小、起始位置、落点，求解初速度方向。
 ```C++
 void UTankAimingComponent::AimAt(FVector HitLocation, float LaunchSpeed)
 {
@@ -542,8 +545,9 @@ void UTankAimingComponent::AimAt(FVector HitLocation, float LaunchSpeed)
 	// 获得Socket的位置
 	FVector startLocation = Barrel->GetSocketLocation(FName("Projectile"));
 
-	// 计算出膛速度
+	// 出膛速度方向（矢量）
 	FVector outLaunchVelocity;
+	// 计算出膛速度，SuggestProjectileVelocity，已知出膛速度、起始位置、落点，求解初速度方向。
 	bool bHaveAimSolution = UGameplayStatics::SuggestProjectileVelocity(
 		this,
 		outLaunchVelocity,
@@ -556,18 +560,121 @@ void UTankAimingComponent::AimAt(FVector HitLocation, float LaunchSpeed)
 		ESuggestProjVelocityTraceOption::DoNotTrace);
 		
 	if(bHaveAimSolution)
-	{
+	{ 
 		// 归一化，就是角度
 		auto aimDirection = outLaunchVelocity.GetSafeNormal();
 
 		// 转动Barrel
 		MoveBarrelTowards(aimDirection);
 
-		FString tankName = GetOwner()->GetName();
-		UE_LOG(LogTemp, Warning, TEXT("%s aiming at: %s"), *tankName, *aimDirection.ToString())
+		//FString tankName = GetOwner()->GetName();
+		//UE_LOG(LogTemp, Warning, TEXT("%s aiming at: %s"), *tankName, *aimDirection.ToString())
 	}
 }
 ```
+## BlueprintSpawnableComponent
+TankBarrel.h，配置UCLASS( )，可在Pawn(BP_MyTank)中作为Component添加:
+```C++
+UCLASS(meta = (BlueprintSpawnableComponent))
+class TANK_API UTankBarrel : public UStaticMeshComponent
+{
+	GENERATED_BODY()
+};
+```
+## 获取世界（World）时间
+```C++
+float time = GetWorld()->GetTimeSeconds();
+```
+## 限制最大最小值: Clamp( )
+```C++
+auto Elevation = FMath::Clamp<float>(RawNewElevation, MinElevationDegrees, MaxElevationDegrees);
+```
+## 投掷物、动态Spawn
+* 新建一个类：ProjectileMovementComponent，引擎自带。
+* 以此类为Base，新建一个蓝图。
+
+Projectile.h:
+```C++
+UCLASS()
+class TANK_API AProjectile : public AActor
+{
+	GENERATED_BODY()
+	
+public:	
+	// Sets default values for this actor's properties
+	AProjectile();
+
+protected:
+	// Called when the game starts or when spawned
+	virtual void BeginPlay() override;
+
+public:	
+	// Called every frame
+	virtual void Tick(float DeltaTime) override;
+
+	void LaunchProjectile(float Speed);
+
+private:
+	// 引擎自带的Component
+	UProjectileMovementComponent* ProjectileMovement = nullptr;
+};
+```
+Projectile.cpp:
+```C++
+#include "Projectile.h"
+
+// Sets default values
+AProjectile::AProjectile()
+{
+ 	// Set this actor to call Tick() every frame.  You can turn this off to improve performance if you don't need it.
+	PrimaryActorTick.bCanEverTick = true;
+
+	// 添加一个名为ProjectileMovement的组件（Component）
+	ProjectileMovement = CreateDefaultSubobject<UProjectileMovementComponent>(FName("Projectile Movement")); //名字要对应
+
+	ProjectileMovement->bAutoActivate = false;
+}
+
+// Called when the game starts or when spawned
+void AProjectile::BeginPlay()
+{
+	Super::BeginPlay();
+	
+}
+
+// Called every frame
+void AProjectile::Tick(float DeltaTime)
+{
+	Super::Tick(DeltaTime);
+
+}
+
+void AProjectile::LaunchProjectile(float Speed)
+{
+	ProjectileMovement->SetVelocityInLocalSpace(FVector::ForwardVector * Speed);
+	ProjectileMovement->Activate();
+}
+```
+MyTank.h
+```C++
+// 生成Projectile，炮弹
+UPROPERTY(EditAnywhere, Category = Setup)
+   TSubclassOf<AProjectile>  ProjectileBlueprint;
+```
+MyTank.cpp:
+```C++
+if (!Barrel) return;
+// 在Barrel的Projectile的Socket处Spawn一个Actor
+Projectile = GetWorld()->SpawnActor<AProjectile>(
+   ProjectileBlueprint,
+   Barrel->GetSocketLocation(FName("Projectile")),
+   Barrel->GetSocketRotation(FName("Projectile"))
+   );
+Projectile->LaunchProjectile(LaunchSpeed);
+```
+* 编译，在BP_Tank中，Projectile Blueprint 选择 Projectile 类生成的蓝图。
+
+
 
 # 这是h1
 ###### 这是h6
