--- a/划重点.md
+++ b/划重点.md
@@ -73,6 +73,7 @@
    * 添加左右履带，同上。
 6. 把*tank*节点拖到*Default Scence Root*节点上，**替换**掉，如果不替换，等会儿spawns 出来的时候，*Pawn不会跟着tank本体。*
 ---
+# 要把*Barrel*和*Turret*的Collision配置为*NoCollision*，否则会**抖动**
 
 # Configuration a Tank (Lesson 117)
 1. 打开物理模拟（Simulate Physics）
@@ -396,7 +397,7 @@ int main()
 * BP_TankPlayerController
    * 父类是C++ Class: TankPlayerController
 * BP_tankGameModeBase 类默认值
-   * Player Controller Class: BP_TankPlayerContrller
+   * Player Controller Class: BP_TankPlayerController
    * Default Pawn Class: BP_Tank
 ---
 
@@ -450,8 +451,8 @@ int main()
    }
    ```
 ## Create Default Sub Objects in C++
-* *CreateDefaultSubobject*必须写在**Actor的无参构造函数中**，否则crash
-* *CreateDefaultSubobject*中的TEXT或者FName参数在同一个Actor中不能重复，否则crash
+* *CreateDefaultSubobject*必须写在**Actor的*无参构造函数* 中**，否则crash
+* *CreateDefaultSubobject*中的TEXT或者FName参数在同一个Actor中*不能重复*，否则crash
    1. ActorComponent
       1. 新建C++ Class, *ActorComponent*，命名*TankAimingComponent*
       2. MyTank.h
@@ -673,7 +674,10 @@ Projectile = GetWorld()->SpawnActor<AProjectile>(
 Projectile->LaunchProjectile(LaunchSpeed);
 ```
 * 编译，在BP_Tank中，Projectile Blueprint 选择 Projectile 类生成的蓝图。
-
+## EditAnywhere VS EditDefaultOnly
+* *EditAnywhere*为每个对象分别设置不同的值
+* *EditDefaultOnly*只能在蓝图下进行设置，生成的实例在World里面没有修改窗口。
+* 如果不希望在任意的位置都能修改，导致变量值不同，则配置为*EditDefaultOnly*。
 
 
 # 这是h1
