--- a/划重点.md
+++ b/划重点.md
@@ -514,7 +514,8 @@ int main()
       return Cast<AMyTank>(playerPawn);
    }
    ```
-   ActorComponent 使用*GetOwner()* :
+   * ActorComponent  
+   使用*GetOwner()到Owner* 以及*GetOwner()->GetRootComponent()到Component* :
    ```C++
    void UTankAimingComponent::AimAt(FVector HitLocation)
    {
@@ -679,6 +680,30 @@ Projectile->LaunchProjectile(LaunchSpeed);
 * *EditDefaultOnly*只能在蓝图下进行设置，生成的实例在World里面没有修改窗口。
 * 如果不希望在任意的位置都能修改，导致变量值不同，则配置为*EditDefaultOnly*。
 
+## Asserts断言
+* Ensure
+
+Macro|Parameters|Behavior
+-----|----------|--------
+ensure|Expression|Notifies the crash reporter on the first time Expression is false
+ensureMsgf|Expression, FormattedText, ...|Notifies the crash reporter and outputs FormattedText to the log on the first time Expression is false
+ensureAlways|Expression|Notifies the crash reporter if Expression is false
+ensureAlwaysMsgf|Expression, FormattedText, ...|Notifies the crash reporter and outputs FormattedText to the log if Expression is false
+Ensure macros evaluate their expressions in all builds, but **only contact the crash reporter in Debug**, Development, Test, and Shipping *Editor* builds.
+
+如果断言失败，运行时会打印出来。Log带有关键词："Ensure"。
+
+Docs are here.(https://docs.unrealengine.com/en-US/Programming/Assertions/index.html)
+
+## FVector::Equals()
+Check against another vector for equality, within specified error limits.
+```C++
+bool Equals
+(
+    const FVector & V,
+    float Tolerance
+) const
+```
 
 # 这是h1
 ###### 这是h6
