add HUD: get owning pawn()

--- a/划重点.md
+++ b/划重点.md
@@ -524,6 +524,8 @@ int main()
       UE_LOG(LogTemp, Warning, TEXT("%s aiming at %s from %s"), *tankName, *(HitLocation.ToString()), *(barrelLocation.ToString()))
    }
    ```
+   * HUD的Pawn及绘图事件(*Get Owning Pawn & Receive Draw HUD*):  
+   ![img](./figures/HUDGetOwningPawn.png)
 ## 获取Sokect的位置
 ```C++
 void UTankAimingComponent::AimAt(FVector HitLocation, float LaunchSpeed)
@@ -703,6 +705,47 @@ bool Equals
     const FVector & V,
     float Tolerance
 ) const
+```
+## 对应按键测试，打印按键名称
+* 重写APlayerController下的InputKey
+```c++
+UCLASS()
+class NIER_API ANierPlayerController : public APlayerController
+{
+	GENERATED_BODY()
+
+public:
+	virtual bool InputKey
+	(
+		FKey Key,
+		EInputEvent EventType,
+		float AmountDepressed,
+		bool bGamepad
+	)override;
+};
+```
+```c++
+bool ANierPlayerController::InputKey(FKey Key, EInputEvent EventType, float AmountDepressed, bool bGamepad)
+{
+	//EventArgs
+
+	UE_LOG(LogTemp, Warning, TEXT("Key Name = %s"), *Key.ToString());
+
+	return true;
+
+}
+```
+## BlueprintImplementableEvent
+```C++
+	UFUNCTION(BlueprintImplementableEvent)
+	void LeftShoulderPressed_MY(const FString& KeyName);  //注意const和引用
+```
+```c++
+xxx ANierPlayerController::xxxFunc(FKey Key)
+{
+	UE_LOG(LogTemp, Warning, TEXT("Key Name = %s"), *Key.ToString());
+	LeftShoulderPressed_MY(Key.ToString());
+}
 ```
 
 # 这是h1
