UActorComponent和AActor的析构/终止事件
UActorComponent和AActor的析构/终止事件

--- a/划重点.md
+++ b/划重点.md
@@ -747,6 +747,13 @@ xxx ANierPlayerController::xxxFunc(FKey Key)
 	LeftShoulderPressed_MY(Key.ToString());
 }
 ```
+# UActorComponent和AActor的析构/终止事件
+* AActor完成后，没有析构事件，因为所有从UObject派生出来的类由系统实现GC，AActor使用Endplay()。
+* *ActorComponent*没有Endplay()，使用```virtual void OnUnregister() override;```
+* 问题解决思路：
+   * 打开*类查看器*，找到*ActorComponent*；
+   * 详细信息有一个网址，但是点不到；
+   * 打开源文件往下翻找到官网API地址，打开找到各种Event事件。
 
 # 这是h1
 ###### 这是h6
